--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
 
-    <title>Login | Bus Management</title>
+    <title>Login | Bus </title>
 </head>
 <body>
     
