--- a/html/login.html
+++ b/html/login.html
@@ -20,11 +20,11 @@
     
         <div class="login-panel">
             <h1>Login</h1>
-            <form class="form" action="" method="">
+            <form class="form" action="login.php" method="post">
                 <p>Email</p>
-                <input class="input-field" type="text"> <br>
+                <input class="input-field" type="text" name="mail"> <br>
                 <p>Password</p>
-                <input class="input-field" type="password"> <br> <br> <br>
+                <input class="input-field" type="password" name="pass"> <br> <br> <br>
                 <input class="submit-btn" type="submit"> <br> <br>
                 
                 <button class="google-signin" >
