--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
 
