edited: html and css files

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
     </div>
 
-    
-    <div class="amrita-logo"></div>
+
+    <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
 
 </body>
 </html>
