--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 <body>
     
     <div class="content">
-        <div class="wallpaper-panel"></div>
+        <img class="wallpaper-panel" src="images/wallpaper0.jpg" alt="">
     
         <div class="login-panel">
             <h1>Login</h1>
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="amrita-logo"></div>
+    <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
 
 
 </body>
