--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,37 @@
     <title>Sign Up | Bus Management</title>
 </head>
 <body>
-    
+    <form action="" method="post">
+        Email <input type="text" placeholder="Enter your email" name="mail"> <br> <br>
+        Name <input type="text" placeholder="Enter your name" name="name"> <br> <br>
+        Course <select name="course" id="1">
+            <option value="-1" selected> Choose Course </option>
+            <option value="1">B.Com</option>
+            <option value="2">B.Com[T&F]</option>
+            <option value="3">BBA</option>
+            <option value="4">BCA</option>
+            <option value="5">BCA[D.S]</option>
+            <option value="6">B.Sc[VM]</option>
+            <option value="7">B.Sc [honours chem]</option>
+            <option value="8">B.Sc[pcm]</option>
+            <option value="9">B.Sc[pmcs]</option>
+            <option value="10">MSc [VC]</option>
+            <option value="11">M.Sc[VC]</option>
+            <option value="12">M.Com Finance and Systems</option>
+            <option value="13">MCA</option>
+            <option value="14">M.Sc chemistry</option>
+            <option value="15">M.A [VM and C]</option>
+            <option value="16">M.A [J and MC]</option>
+            <option value="17">Integrated BCA-MCA</option>
+            <option value="18">Integrated B.Sc-M.Sc [VC]</option>
+            <option value="19">Integrated B.Sc-M.Sc [Chem]</option>
+        </select> <br> <br>
+        Register Number <input type="text" placeholder="Enter roll number" name="reg"> <br> <br>
+        Semester <input type="text" placeholder="Enter Semester" name="sem"> <br> <br>
+        Address <input type="text" placeholder="Enter address" name="addr"> <br> <br> <br>
+        <input type="submit" value="submit">
+        
+
+    </form>
 </body>
 </html>
