signup.html, signup.css, login.html, login.css, index.css files edited

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </div>
 
         <div class="map">
-
+            <img class="map-img" src="images/map.png" alt="map">
+            
             <div class="floating">
                 <div class="location">
                     <h4>Current location</h4>
@@ -81,7 +82,9 @@
                     <p class="b" >LVM Licence</p>
                 </div>
 
-            </div>            
+            </div> 
+
+            
 
         </div>
 
