small changes made

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     
         <div class="login-panel">
             <h1>Login</h1>
-            <form class="form" action="login.php" method="post">
+            <form class="form" action="" method="post">
                 <p>Email</p>
                 <input class="input-field" type="text" placeholder="Email" name="mail"> <br>
                 <p>Password</p>
