--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
         <center><h1>Create an Account</h1></center>
         <center><p>Already have an account?</p> <a class="sign-in" href="login.html">Sign in</a> </center>
         <center>
-        <form class="form" action="" method="post">
+        <form class="form" action="php/signup.php" method="post">
             <!--<p>Email</p>-->
             <input class="input-field" type="text" placeholder="Email" name="mail"> <br>
             <!--<p>Name</p>-->
