edited: css files

--- a/signup.html
+++ b/signup.html
@@ -16,9 +16,10 @@
 <body>
     <div class="container">
 
-        <center><h1>Create an Account</h1></center>
-        <center><p>Already have an account?</p> <a class="sign-in" href="login.html">Sign in</a> </center>
         <center>
+        <h1>Create an Account</h1>
+        <p>Already have an account? <a class="sign-in" href="login.html">Sign in</a></p>
+        
         <form class="form" action="php/signup.php" method="post">
             <!--<p>Email</p>-->
             <input class="input-field" type="text" placeholder="Email" name="mail"> <br>
