edited: added code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <h3>Bus Transportation Management</h3>
 
             <nav class="nav" >
-                <button class="btn" >Available Bus</button> <br> <br>
+                <a href="available_bus.html">
+                    <button class="btn" >Available Bus</button>
+                </a> <br> <br>
                 <button class="btn" >Fee Details</button> <br> <br>
                 <button class="btn" >Rules and Regulations</button> <br> <br>
                 <button class="btn" >Settings</button>
