name for password

--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
             <!--<p>Semester</p>-->
             <input class="input-field" type="text" placeholder="Semester" name="sem"> <br>
             <!--<p>Password</p>-->
-            <input class="input-field" type="password" placeholder="Password"> <br> 
+            <input class="input-field" type="password" placeholder="Password" name="pass"> <br> 
             <input class="submit-btn" type="submit" value="Sign Up >">
         </form>
         </center>
