edited: signup html+css code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </a> <br> <br>
                 <button class="btn" >Fee Details</button> <br> <br>
                 <button class="btn" >Rules and Regulations</button> <br> <br>
-                <button class="btn" >Settings</button>
+                <a href="settings.html">
+                    <button class="btn" >Settings</button>
+                </a>
+                
             </nav>
             <br> <br> <br> <br>
             
