--- a/settings.html
+++ b/settings.html
@@ -29,8 +29,10 @@
             <p>Contact Number</p>
             <i class="fa solid fa-pen"></i>
             <input class="input-field" type="text"> <br>
-
-            <button class="add-btn" >Update Address ></button>
+            <a href="address.html" target="_blank">
+                <button class="add-btn" >Update Address ></button>
+            </a>
+            
             
             <br> <br> <br> <br>
             <input class="btn" type="submit" value="Save Changes">
