--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
 
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
 
-    <title>Sign Up | Bus Management</title>
+    <title>Sign Up | Bus </title>
 </head>
 <body>
     <div class="container">
