php and html[name] changes

--- a/signup.html
+++ b/signup.html
@@ -47,15 +47,15 @@
                     <option value="Integrated B.Sc-M.Sc [Chem]">Integrated B.Sc-M.Sc [Chem]</option>
                 </select> <br>
                 <input class="input-field" type="text" placeholder="Semester" name="sem"> <br>
-                <input class="input-field" type="password" placeholder="Password"> <br> 
+                <input class="input-field" type="password" placeholder="Password" name="pass"> <br> 
             </div>
     
             <div class="details">
                 <h1>Address Details</h1>
-                <input class="input-field" type="text" placeholder="Door No"> <br>
-                <input class="input-field" type="text" placeholder="Street Name"> <br>
-                <input class="input-field" type="text" placeholder="Landmark"> <br>
-                <input class="input-field" type="text" placeholder="Pincode"> <br>
+                <input class="input-field" type="text" placeholder="Door No" name="door_no"> <br>
+                <input class="input-field" type="text" placeholder="Street Name" name="street_name"> <br>
+                <input class="input-field" type="text" placeholder="Landmark" name="landmark"> <br>
+                <input class="input-field" type="text" placeholder="Pincode" name="pincode"> <br>
             </div>
 
             <input class="submit-btn" type="submit" value="Sign Up >">
