--- a/homepage.html
+++ b/homepage.html
@@ -25,8 +25,13 @@
                 <a href="available_bus.html">
                     <button class="btn" >Available Bus</button>
                 </a> <br> <br>
-                <button class="btn" >Fee Details</button> <br> <br>
-                <button class="btn" >Rules and Regulations</button> <br> <br>
+
+                <a href="comingsoon.html">
+                    <button class="btn" >Fee Details</button> <br> <br>
+                </a>
+                <a href="comingsoon.html">
+                    <button class="btn" >Rules and Regulations</button> <br> <br>
+                </a>
                 <a href="settings.html">
                     <button class="btn" >Settings</button>
                 </a>
@@ -65,9 +70,11 @@
                 </div>
 
                 <div class="call">
-                    <button class="call-btn" >
-                        <p>Call</p>
-                    </button>
+                    <a href="comingsoon.html">
+                        <button class="call-btn" >
+                            <p>Call</p>
+                        </button>
+                    </a>
                 </div>
 
                 <div class="reg">
@@ -88,13 +95,9 @@
                 </div>
 
             </div> 
-
-            
-
         </div>
 
     </div>
-
 
     <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
 
