changed signup html and loginphp

--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,7 @@
         <h1>Create an Account</h1>
         <p>Already have an account? <a class="sign-in" href="login.html">Sign in</a></p>
 
-        action="php/signup.php"
-        <form name="form" class="form"  method="post">
+        <form name="form" class="form" action="php/signup.php" method="post">
             <div class="details">
                 <input class="input-field" type="text" placeholder="Email" name="mail"><br>
                 
