--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <input class="input-field" type="text" placeholder="Email" name="mail"> <br>
                 <p>Password</p>
                 <input class="input-field" type="password" placeholder="Password" name="pass"> <br> <br> <br>
-                <input class="submit-btn" type="submit"> <br> <br>                
+                <input class="submit-btn" type="submit" value="LOGIN"> <br> <br>                
             </form>
 
             <a href="comingsoon.html">
