--- a/settings.html
+++ b/settings.html
@@ -43,7 +43,7 @@
         <br><br>
         <center>
         <div class="logout" >
-            <a href="#">
+            <a href="php/logout.php">
                 <button class="logout-btn" >Logout</button>
             </a>
         </div>
