--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <div class="container2" id="about">
         <center>
             <div class="about">
-                <h1 style="font-weight:900; font-size:90px;">" Never Be Late Again "</h1>
-                <h1>😉</h1>
+                <h1 style="font-size:90px;">" Never Be Late Again "</h1>
+                <h1> 😏 </h1>
                 <br> <br>
                 <h1 style="font-size: 30px;">" User friendly student made website for availing bus facilities from the college " - Devs</h1>
             </div>
