--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,9 @@
     <title>Sign Up | Bus Management</title>
 </head>
 <body>
+
+    <div id="preloader"></div>
+
     <div class="container">
         <center>
         <h1>Create an Account</h1>
@@ -64,5 +67,28 @@
         </center>
     </div>
     
+    <script>
+        var loader = document.getElementById("preloader");
+        const fadeEffect = setInterval(() => 
+        {
+            if (!preloader.style.opacity) 
+            {
+                preloader.style.opacity = 1;
+            }
+            if (preloader.style.opacity > 0) 
+            {
+                preloader.style.opacity -= 0.1;
+            } 
+            else 
+            {
+                clearInterval(fadeEffect);
+                loader.style.display = "none";
+            }
+            
+        }, 100);
+
+        window.addEventListener('load', fadeEffect);
+    </script>
+
 </body>
 </html>
