--- a/login.html
+++ b/login.html
@@ -22,11 +22,20 @@
     
         <div class="login-panel">
             <h1>Welcome Back</h1>
-            <form class="form" action="php/login.php" method="post">
+            <form name="form" class="form" action="php/login.php" method="post">
                 <p>Email</p>
-                <input class="input-field" type="text" placeholder="Email" name="mail"> <br>
+                <input class="input-field" type="text" placeholder="Email" name="mail" 
+                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                        oninvalid="this.setCustomValidity('Sorry , we dont recognize this email.')"
+                        onchange="try{setCustomValidity('')}catch(e){}"
+                        oninput="setCustomValidity(' ')"
+                        > <br>
                 <p>Password</p>
-                <input class="input-field" type="password" placeholder="Password" name="pass"> <br> <br> <br>
+                <input class="input-field" type="password" placeholder="Password" name="pass"
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{5,}$"
+                        oninvalid="this.setCustomValidity('Minimum 5 characters and 1 number:')"
+                        onchange="try{setCustomValidity('')}catch(e){}"
+                        oninput="setCustomValidity(' ')"> <br> <br> <br>
                 <input class="submit-btn" type="submit" value="LOGIN"> <br> <br>                
             </form>
 
@@ -41,10 +50,13 @@
 
         </div>
     </div>
-
-    <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
+    
+    <a href="index.html">
+        <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
+    </a>
 
     <script>
+
         var loader = document.getElementById("preloader");
         const fadeEffect = setInterval(() => 
         {
