--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="images/jpg" href="images/fav4.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
 
         <form name="form" class="form" action="php/signup.php" method="post">
             <div class="details">
-                <input class="input-field" type="text" placeholder="Email" name="mail"><br>
+                <input class="input-field" type="text" placeholder="Email" name="mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"><br>
                 
                 <input class="input-field" type="text" placeholder="First Name" name="name"> <br>
                 <input class="input-field" type="text" placeholder="Roll No" name="reg"> <br>
