--- a/team.html
+++ b/team.html
@@ -25,6 +25,7 @@
             <div class="left-title">
                 <h3>Vishnu N</h4>
                 <p class="desc">MY.SC.I5MCA20001</p>
+                <p class="desc">Front End Developer</p>
                 <p class="desc">UI, HTML5, CSS, PHP</p>
                 <a href="https://www.instagram.com/_._v.art_._/" target="_blank">
                     <i class="fa fa-instagram"></i>
@@ -36,6 +37,7 @@
             <div class="right-title">
                 <h3>Saketh P</h3>
                 <p class="desc">MY.SC.I5MCA20003</p>
+                <p class="desc">Back End Developer</p>
                 <p class="desc">UI, HTML5, CSS, PHP</p>
                 <a href="https://www.instagram.com/__.saketh.___/" target="_blank">
                     <i class="fa fa-instagram"></i>
