--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/signup.css">
 
+    <script src="js/perloader.js"></script>
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
     <script src="js/signup.js"></script>
     <title>Sign Up | Bus Management</title>
@@ -87,29 +88,6 @@
         </form>
         </center>
     </div>
-    
-    <script>
-        var loader = document.getElementById("preloader");
-        const fadeEffect = setInterval(() => 
-        {
-            if (!preloader.style.opacity) 
-            {
-                preloader.style.opacity = 1;
-            }
-            if (preloader.style.opacity > 0) 
-            {
-                preloader.style.opacity -= 0.1;
-            } 
-            else 
-            {
-                clearInterval(fadeEffect);
-                loader.style.display = "none";
-            }
-            
-        }, 100);
-
-        window.addEventListener('load', fadeEffect);
-    </script>
 
 </body>
 </html>
