--- a/login.html
+++ b/login.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css">
 
-    <script src="js/perloader.js"></script>
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
     
     <title>Login | Bus Management</title>
@@ -56,6 +55,29 @@
     <a href="index.html">
         <img class="amrita-logo" src="images/amrita-logo.png" alt="amrita-logo">
     </a>
+
+    <script>
+        var loader = document.getElementById("preloader");
+        const fadeEffect = setInterval(() => 
+        {
+            if (!preloader.style.opacity) 
+            {
+                preloader.style.opacity = 1;
+            }
+            if (preloader.style.opacity > 0) 
+            {
+                preloader.style.opacity -= 0.1;
+            } 
+            else 
+            {
+                clearInterval(fadeEffect);
+                loader.style.display = "none";
+            }
+            
+        }, 100);
+
+        window.addEventListener('load', fadeEffect);
+    </script>
 
 </body>
 </html>
