added: lorem.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <center>
             <div class="about">
                 <h1 style="font-size:90px;">" Never Be Late Again "</h1>
-                <h1> - 😏 Devs  </h1>
+                <h1>- Devs<a class="emoji" href=""> <span> 😏 </span></a> </h1>
                 <br> <br>
                 <h1 style="font-size: 30px;">" User friendly student made website from scratch, for availing bus facilities from the college "</h1>
             </div>
