--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <img class="wallpaper-panel" src="images/wallpaper0.jpg" alt="">
     
         <div class="login-panel">
-            <h1>Welcome Back</h1>
+            <h1>Welcome Back!</h1>
             <form name="form" class="form" action="php/login.php" method="post">
                 <p>Email</p>
                 <input class="input-field" type="text" placeholder="Email" name="mail" 
