--- a/error.html
+++ b/error.html
@@ -8,13 +8,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
-    
+    <link rel="stylesheet" href="css/error.css">
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://kit.fontawesome.com/f6ec98831b.js" crossorigin="anonymous"></script>
 
-    <title>Amrita Bus Transport</title>
+    <title>404 | Somefhing pappened</title>
 </head>
 <body>
+    
+    <div class="container">
+        <center>
+            <lottie-player class="lottie" src="https://assets10.lottiefiles.com/packages/lf20_ztv0ty4k.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-playe>
+            <h1>404</h1>
+            <p>" Roses are Red, Violets are Blue Unexpected '{' on line 32 "</p>
+        </center>
+    </div>
 
 </body>
 </html>
