--- a/error.html
+++ b/error.html
@@ -19,11 +19,15 @@
     
     <div class="container">
         <center>
-            <lottie-player class="lottie" src="https://assets10.lottiefiles.com/packages/lf20_ztv0ty4k.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay></lottie-playe>
-            <h1>404</h1>
-            <p>" Roses are Red, Violets are Blue Unexpected '{' on line 32 "</p>
+        <lottie-player class="lottie" src="https://assets10.lottiefiles.com/packages/lf20_ztv0ty4k.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px;"  loop  autoplay>
+        </lottie-playe>
         </center>
     </div>
+
+    <center>
+        <h1>404</h1>
+        <p>" Roses are Red, Violets are Blue Unexpected '{' on line 32 "</p>
+    </center>
 
 </body>
 </html>
